Fix hero section and learn from pros styling

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </nav>
     <section class="hero">
       <h1>Get schooled</h1>
-      <p><span>SMILES</span> <span>GRIN</span> <span>LAUGH</span></p>
+      <p>SMILES GRIN LAUGH</p>
       <button>Register for free</button>
     </section>
   </header>
@@ -34,7 +34,7 @@
         <article>
           <img src="images/pro1.png" alt="Phillip Massey">
           <h3>Phillip Massey</h3>
-          <p>« Smile of the year » 2018–2019</p>
+          <p> Best « Smile of the year » 2018–2019</p>
         </article>
         <article>
           <img src="images/pro2.png" alt="Nannie Lawrence">
