Add styling for quote, videos, membership, FAQ and footer sections

--- a/index.html
+++ b/index.html
@@ -150,36 +150,46 @@
     </section>
 
     <!-- FAQ -->
-    <section class="faq">
-      <h2>F.A.Q.</h2>
-      <div class="faq-grid">
-        <article>
-          <h3>How does this work?</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
-        </article>
-        <article>
-          <h3>How much does it cost?</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
-        </article>
-        <article>
-          <h3>Can I cancel anytime?</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
-        </article>
-        <article>
-          <h3>Do you provide certificates?</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
-        </article>
-      </div>
-    </section>
+<section class="faq">
+  <h2>F.A.Q.</h2>
+  <div class="faq-items">
+    <div class="faq-item">
+      <h3>How does this work?</h3>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
+    </div>
+    <div class="faq-item">
+      <h3>How much does it cost?</h3>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
+    </div>
+    <div class="faq-item">
+      <h3>Can I cancel anytime?</h3>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
+    </div>
+    <div class="faq-item">
+      <h3>Do you provide certificates?</h3>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
+    </div>
+  </div>
+</section>
+
+   
   </main>
 
   <!-- FOOTER -->
   <footer>
-    <div class="footer-content">
-      <a href="#"><img src="images/logo.png" alt="Logo"></a>
-      <p>© 2025 - CSS Advanced Project</p>
+  <div class="footer-top">
+    <img src="logo.png" alt="Logo">
+
+    <div class="socials">
+      <a href="#"><img src="facebook.png" alt="Facebook"></a>
+      <a href="#"><img src="twitter.png" alt="Twitter"></a>
+      <a href="#"><img src="instagram.png" alt="Instagram"></a>
     </div>
-  </footer>
+  </div>
+
+  <p>© 2025 Your Company. All rights reserved.</p>
+</footer>
+
 </body>
 </html>
 
