--- a/images/index.html
+++ b/images/index.html
@@ -67,59 +67,39 @@
     </section>
 
     <!-- POPULAR TUTORIALS -->
-<section class="tutorials">
-  <h2>Most <span>popular</span> tutorials</h2>
-  <div class="tutorial-grid">
-    <article>
-      <div class="tutorial-thumb">
-        <img src="images/tutorial1.png" alt="Diagonal Smile">
-        <img src="images/icon3.png" alt="Play button" class="play-btn">
+    <section class="tutorials">
+      <h2>Most <span>popular</span> tutorials</h2>
+      <div class="tutorial-grid">
+        <article>
+          <img src="images/tutorial1.png" alt="Diagonal Smile">
+          <h3>Diagonal Smile</h3>
+          <p>Lorem ipsum dolor sit amet, consect adipiscing elit.</p>
+          <div class="rating">★★★★★</div>
+          <p>8 min</p>
+        </article>
+        <article>
+          <img src="images/tutorial2.png" alt="Sad Smile">
+          <h3>Sad Smile</h3>
+          <p>Lorem ipsum dolor sit amet, consect adipiscing elit.</p>
+          <div class="rating">★★★★★</div>
+          <p>8 min</p>
+        </article>
+        <article>
+          <img src="images/tutorial3.png" alt="Natural Smile">
+          <h3>Natural Smile</h3>
+          <p>Lorem ipsum dolor sit amet, consect adipiscing elit.</p>
+          <div class="rating">★★★★★</div>
+          <p>8 min</p>
+        </article>
+        <article>
+          <img src="images/tutorial4.png" alt="Happy Smile">
+          <h3>Happy Smile</h3>
+          <p>Lorem ipsum dolor sit amet, consect adipiscing elit.</p>
+          <div class="rating">★★★★★</div>
+          <p>8 min</p>
+        </article>
       </div>
-      <h3>Diagonal Smile</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-      <div class="rating">
-        <img src="images/icon4.png" alt="Rating stars">
-      </div>
-    </article>
-
-    <article>
-      <div class="tutorial-thumb">
-        <img src="images/tutorial2.png" alt="Sad Smile">
-        <img src="images/icon3.png" alt="Play button" class="play-btn">
-      </div>
-      <h3>Sad Smile</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-      <div class="rating">
-        <img src="images/icon4.png" alt="Rating stars">
-      </div>
-    </article>
-
-    <article>
-      <div class="tutorial-thumb">
-        <img src="images/tutorial3.png" alt="Natural Smile">
-        <img src="images/icon3.png" alt="Play button" class="play-btn">
-      </div>
-      <h3>Natural Smile</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-      <div class="rating">
-        <img src="images/icon4.png" alt="Rating stars">
-      </div>
-    </article>
-
-    <article>
-      <div class="tutorial-thumb">
-        <img src="images/tutorial4.png" alt="Happy Smile">
-        <img src="images/icon3.png" alt="Play button" class="play-btn">
-      </div>
-      <h3>Happy Smile</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-      <div class="rating">
-        <img src="images/icon4.png" alt="Rating stars">
-      </div>
-    </article>
-  </div>
-</section>
-
+    </section>
 
     <!-- MEMBERSHIP -->
     <section class="membership">
@@ -182,4 +162,3 @@
   </footer>
 </body>
 </html>
-
